--- a/TicketingSystemProject/App.EndPoints.MVC/Views/_ViewImports.cshtml
+++ b/TicketingSystemProject/App.EndPoints.MVC/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using App.EndPoints.MVC
 @using App.EndPoints.MVC.Models
+@using App.EndPoints.MVC.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, AuthoringTagHelpers
